--- a/src/app/user-page/user-skills/skill/skill.component.html
+++ b/src/app/user-page/user-skills/skill/skill.component.html
@@ -1,17 +1,19 @@
 
-<div *ngIf="!addingSkill && isLegal" class="col-md-4 skill-name border">
+<td *ngIf="!addingSkill && isLegal" class="cell-allow border cell-text">
   <strong>{{ skill.name }}</strong>
-</div>
+</td>
 
-<div *ngIf="!isLegal && !addingSkill" class="col-md-6 skill-name border">{{ skill.name }}</div>
-<div *ngIf="addingSkill && isLegal" class="col-md-4 skill-name border">
+<td *ngIf="!isLegal && !addingSkill" class="cell-not-allow border cell-text">{{ skill.name }}</td>
+<td *ngIf="addingSkill && isLegal" class="cell-allow border">
   <app-task-picker-component [arr]="staticData.skillName" [filter]="skills" [initial]="skillNameId" [chooseId]="updateSkillNameId.bind(this)"></app-task-picker-component>
-</div>
-<div class="col-md-4 skill-level border" *ngIf="!edit && isLegal">{{ staticData.Level[skillLevelId] }}</div>
-<div *ngIf="!isLegal" class="col-md-6 skill-level border">{{ staticData.Level[skillLevelId] }}</div>
-<div *ngIf="edit" class="col-md-4 skill-level border">
+</td>
+<td class="cell-allow border cell-text" *ngIf="!edit && isLegal">{{ staticData.Level[skillLevelId] }}</td>
+<td *ngIf="!isLegal" class="cell-not-allow border cell-text">{{ staticData.Level[skillLevelId] }}</td>
+<td *ngIf="edit" class="cell-allow border">
   <app-task-picker-component [arr]="staticData.Level" [initial]="skillLevelId" [chooseId]="updateLevel.bind(this)"></app-task-picker-component>
-</div>
-<div class="col-md-4" *ngIf="!edit && isLegal"><button class="btn btn-default" *ngIf="isLegal" (click)="toggleEdit()">Edit</button></div>
-<div class="col-md-2" *ngIf="edit"><button class="btn btn-success" (click)="submitChanges()">Submit</button></div>
-<div class="col-md-2" *ngIf="edit && !addingSkill"><button class="col-md-2" class="btn btn-danger" (click)="deleteSkill()">X</button></div>
+</td>
+<td class="cell-allow" *ngIf="!edit && isLegal"><button class="btn btn-default" *ngIf="isLegal" (click)="toggleEdit()">Edit</button></td>
+<td class="cell-allow" *ngIf="edit">
+  <button class="btn btn-success" (click)="submitChanges()">Submit</button>
+  <button class="col-md-2" class="btn btn-danger" (click)="deleteSkill()">X</button>
+</td>
