--- a/src/app/add-ticket/add-ticket.component.html
+++ b/src/app/add-ticket/add-ticket.component.html
@@ -64,8 +64,10 @@
       </div>
     </div>
 
-    <div class="text-center">
-      <button class="btn btn-primary" type="button" [disabled]="!ticketForm.valid" (click)="submitTicket()">Submit Ticket</button>
+    <div class="row">
+      <div class="col-md-offset-6 col-md-3">
+        <button class="btn btn-primary" type="button" [disabled]="!ticketForm.valid" (click)="submitTicket()">Submit Ticket</button>
+      </div>
     </div>
     <div class="text-right">
       <span>*All fields are required</span>
