--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -42,7 +42,7 @@
         </a>
       </li>
 
-      <li class="nav-item" *ngIf="isAdmin || isPm">
+      <li class="nav-item" *ngIf="isAdmin">
         <a class="nav-link"
           routerLink="/admin/"
           routerLinkActive="active">
