--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row container">
   <h1 *ngIf="project" class="text-center">{{ project.name }}</h1><button class="btn btn-primary" [routerLink]="['/ticket', projectId]">New ticket</button>
 
   <div class="col-md-1">
